--- a/app/src/main/res/layout/fragment_guide_frame_vp2.xml
+++ b/app/src/main/res/layout/fragment_guide_frame_vp2.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.torwitharti.ui.home.GuideFrameVP2ViewModel" />
+            type="com.example.torwitharti.ui.home.model.GuideFrameVP2ViewModel" />
 
         <import type="android.view.View" />
 
