--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -16,18 +16,18 @@
         tools:context=".ui.home.ReportFragment">
 
         <TextView
-            android:id="@+id/tv_report_frag"
+            android:id="@+id/tv_report_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="144dp"
-            android:text="TextView"
+            android:text="@string/frag_report_title"
             android:textAppearance="@style/title_in_fragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_report_subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -35,24 +35,24 @@
             android:text="@string/frag_report_sub_title"
             android:textAppearance="@style/subtitle_in_fragment"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_report_frag"
-            app:layout_constraintTop_toBottomOf="@+id/tv_report_frag" />
+            app:layout_constraintStart_toStartOf="@+id/tv_report_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_report_title" />
 
 
-        <androidx.viewpager.widget.ViewPager
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_report_subtitle"
+            tools:layout_editor_absoluteX="-29dp" />
+
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager_report_frag"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/pager_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </androidx.viewpager.widget.ViewPager>
+            app:layout_constraintTop_toBottomOf="@+id/tab_layout_report"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
