--- a/app/src/main/res/layout/fragment_report_tab.xml
+++ b/app/src/main/res/layout/fragment_report_tab.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.torwitharti.ui.home.model.ReportTabViewModel" />
+            type="com.example.torwitharti.ui.home.model.ReportFragmentViewModel" />
 
         <import type="com.example.torwitharti.ui.home.model.ConnectedWith" />
 
@@ -16,17 +16,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/iv_snowflake_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:src="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_step_info"
             app:layout_constraintStart_toEndOf="@+id/tv_time_duration"
             app:layout_constraintTop_toTopOf="@+id/tv_step_title"
-            app:srcCompat="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? `@drawable/ic_success_small` : `@drawable/ic_connection_failed_small`}"
             tools:srcCompat="@drawable/ic_success_small" />
 
         <TextView
@@ -46,17 +46,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/frag_report_snowflake"
             android:textAppearance="@style/list_item_style"
             app:layout_constraintStart_toEndOf="@+id/iv_snowflake_icon"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/tv_step_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? `@string/frag_report_success`:`@string/frag_report_obfs_snowflake_fail`}"
+            android:text="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? @string/frag_report_success:@string/frag_report_obfs_snowflake_fail}"
             android:textAppearance="@style/report_step_info"
             app:layout_constraintStart_toStartOf="@+id/tv_step_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_step_title"
@@ -64,8 +64,8 @@
 
         <View
             android:id="@+id/v_divider_1"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/dotted_line"
             android:rotation="90"
@@ -75,8 +75,8 @@
 
         <View
             android:id="@+id/v_divider_2"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/dotted_line"
             android:rotation="90"
@@ -110,7 +110,7 @@
             android:id="@+id/tv_info_obfs4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? `@string/frag_report_success`:`@string/frag_report_obfs_snowflake_fail`}"
+            android:text="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? @string/frag_report_success:@string/frag_report_obfs_snowflake_fail}"
             android:textAppearance="@style/report_step_info"
             app:layout_constraintStart_toStartOf="@+id/tv_title_obfs4"
             app:layout_constraintTop_toBottomOf="@+id/tv_title_obfs4"
@@ -142,10 +142,8 @@
             android:id="@+id/tv_direct_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="@{viewModel.connectedWith == ConnectedWith.DIRECT ? `@string/frag_report_success`:`@string/frag_report_tor_fail`}"
+            android:text="@{viewModel.connectedWith == ConnectedWith.DIRECT ? @string/frag_report_success:@string/frag_report_tor_fail}"
             android:textAppearance="@style/report_step_info"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_duration_info"
             app:layout_constraintTop_toBottomOf="@+id/tv_duration_info"
             tools:text="@string/frag_report_tor_fail" />
@@ -155,10 +153,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:src="@{viewModel.connectedWith == ConnectedWith.OBFS4 ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_info_obfs4"
             app:layout_constraintStart_toEndOf="@+id/tv_duration_obfs4"
             app:layout_constraintTop_toTopOf="@+id/tv_title_obfs4"
-            app:srcCompat="@{viewModel.connectedWith == ConnectedWith.OBFS4 ? `@drawable/ic_success_small` : `@drawable/ic_connection_failed_small`}"
             tools:srcCompat="@drawable/ic_connection_failed_small" />
 
         <ImageView
@@ -166,10 +164,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:src="@{viewModel.connectedWith == ConnectedWith.DIRECT ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_direct_info"
             app:layout_constraintStart_toEndOf="@+id/tv_duration_direct"
             app:layout_constraintTop_toTopOf="@+id/tv_duration_info"
-            app:srcCompat="@{viewModel.connectedWith == ConnectedWith.DIRECT ? `@drawable/ic_success_small` : `@drawable/ic_connection_failed_small`}"
             tools:srcCompat="@drawable/ic_connection_failed_small" />
 
         <androidx.constraintlayout.widget.Group
@@ -185,6 +183,31 @@
             android:layout_height="wrap_content"
             app:constraint_referenced_ids="v_divider_2,tv_duration_obfs4,tv_title_obfs4,tv_info_obfs4,iv_obfs4_icon"
             tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/report_tab_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/frag_report_connection_timeline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/action_button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:drawableStart="@drawable/ic_report_config"
+            android:drawablePadding="16dp"
+            android:elevation="4dp"
+            android:text="@string/frag_report_config_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
