--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -41,11 +41,20 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout_report"
-            android:layout_width="match_parent"
+           android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabSelectedTextColor="?colorOnPrimary"
+            app:tabTextColor="?colorOnPrimary"
+            android:textSize="14sp"
+            app:tabIndicator="@null"
+            app:tabBackground="@drawable/selector_report_tab_bg"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_report_subtitle"
-            tools:layout_editor_absoluteX="-29dp" />
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/report_tab_bg"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_report_subtitle" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager_report_frag"
