--- a/app/src/main/res/layout/fragment_report_tab.xml
+++ b/app/src/main/res/layout/fragment_report_tab.xml
@@ -9,7 +9,7 @@
             name="viewModel"
             type="com.example.torwitharti.ui.home.model.ReportFragmentViewModel" />
 
-        <import type="com.example.torwitharti.ui.home.model.ConnectedWith" />
+        <import type="com.example.torwitharti.ui.home.model.TransportType" />
 
         <import type="android.view.View" />
     </data>
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:src="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
+            android:src="@{viewModel.connectedWith == TransportType.SNOWFLAKE ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_step_info"
             app:layout_constraintStart_toEndOf="@+id/tv_time_duration"
             app:layout_constraintTop_toTopOf="@+id/tv_step_title"
@@ -56,7 +56,7 @@
             android:id="@+id/tv_step_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? @string/frag_report_success:@string/frag_report_obfs_snowflake_fail}"
+            android:text="@{viewModel.connectedWith == TransportType.SNOWFLAKE ? @string/frag_report_success:@string/frag_report_obfs_snowflake_fail}"
             android:textAppearance="@style/report_step_info"
             app:layout_constraintStart_toStartOf="@+id/tv_step_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_step_title"
@@ -110,7 +110,7 @@
             android:id="@+id/tv_info_obfs4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.connectedWith == ConnectedWith.SNOWFLAKE ? @string/frag_report_success:@string/frag_report_obfs_snowflake_fail}"
+            android:text="@{viewModel.connectedWith == TransportType.SNOWFLAKE ? @string/frag_report_success:@string/frag_report_obfs_snowflake_fail}"
             android:textAppearance="@style/report_step_info"
             app:layout_constraintStart_toStartOf="@+id/tv_title_obfs4"
             app:layout_constraintTop_toBottomOf="@+id/tv_title_obfs4"
@@ -142,7 +142,7 @@
             android:id="@+id/tv_direct_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.connectedWith == ConnectedWith.DIRECT ? @string/frag_report_success:@string/frag_report_tor_fail}"
+            android:text="@{viewModel.connectedWith == TransportType.DIRECT ? @string/frag_report_success:@string/frag_report_tor_fail}"
             android:textAppearance="@style/report_step_info"
             app:layout_constraintStart_toStartOf="@+id/tv_duration_info"
             app:layout_constraintTop_toBottomOf="@+id/tv_duration_info"
@@ -153,7 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:src="@{viewModel.connectedWith == ConnectedWith.OBFS4 ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
+            android:src="@{viewModel.connectedWith == TransportType.OBFS4 ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_info_obfs4"
             app:layout_constraintStart_toEndOf="@+id/tv_duration_obfs4"
             app:layout_constraintTop_toTopOf="@+id/tv_title_obfs4"
@@ -164,7 +164,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:src="@{viewModel.connectedWith == ConnectedWith.DIRECT ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
+            android:src="@{viewModel.connectedWith == TransportType.DIRECT ? @drawable/ic_success_small : @drawable/ic_connection_failed_small}"
             app:layout_constraintBottom_toBottomOf="@+id/tv_direct_info"
             app:layout_constraintStart_toEndOf="@+id/tv_duration_direct"
             app:layout_constraintTop_toTopOf="@+id/tv_duration_info"
