-Further cleaned up the old design -MainActivity rectified to handle status bar(ongoing) -App Theme updated -Vpn status consolidated into single flag (a lot simpler ConnectFramgment ViewModel)

--- a/app/src/main/res/drawable/av_success.xml
+++ b/app/src/main/res/drawable/av_success.xml
@@ -26,4 +26,10 @@
     <target
         android:name="rotation"
         android:animation="@animator/success_rotate" />
+
+    <target
+        android:name="path"
+        android:animation="@animator/connect_state_green_to_purple"
+        />
+
 </animated-vector>
