--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="figma_gray">#14000000</color>
-    <color name="figma_bg">#FFE5E5E5</color>
-    <color name="figma_text">#FF000000</color>
+<!--        <color name="figma_gray">#14000000</color>-->
+<!--        <color name="figma_bg">#FFE5E5E5</color>-->
+<!--        <color name="figma_text">#FF000000</color>-->
 
-    <color name="figma_gray_inverted">#EB000000</color>
-    <color name="figma_bg_inverted">#FF1a1a1a</color>
-    <color name="figma_text_inverted">#FFFFFFFF</color>
+<!--        <color name="figma_gray_inverted">#EB000000</color>-->
+<!--        <color name="figma_bg_inverted">#FF1a1a1a</color>-->
+<!--        <color name="figma_text_inverted">#FFFFFFFF</color>-->
 
-    <color name="colorIconPrimary">#FFFFFF</color>
-    <color name="colorIconSecondary">#000000</color>
-    <color name="colorSubtitle">#0C0C0D</color>
+<!--        <color name="colorIconPrimary">#FFFFFF</color>-->
+<!--        <color name="colorIconSecondary">#000000</color>-->
+<!--        <color name="colorSubtitle">#0C0C0D</color>-->
 
-    <color name="colorProgress1">#14000000</color>
-    <color name="colorProgress2">#0A000000</color>
+<!--        <color name="colorProgress1">#14000000</color>-->
+<!--        <color name="colorProgress2">#0A000000</color>-->
+
+<!--        <color name="colorInfoErrorCollapsedSubtitle">#66000000</color>-->
 
 
-    <color name="colorInfoErrorCollapsedSubtitle">#66000000</color>
+    <!--New colors starts from here-->
+    <color name="purpleDark">#1D0B41</color>
+    <color name="purpleNormal">#B371F4</color>
+    <color name="purpleDarkText">#400A76</color>
+    <color name="purpleDarkBottomNav">#3B1782</color>
+    <color name="purpleGradientLight">#BF89F5</color>
+    <color name="purpleGradientDark">#A65AF2</color>
+
+    <color name="greenNormal">#52E0B6</color>
+    <color name="greenDarkText">#0B4131</color>
+    <color name="greenGradientLight">#7DE8C8</color>
+    <color name="greenGradientNormal">#3CDDAC</color>
+    <color name="greenGradientDark">#52E0B6</color>
+
+    <color name="yellowNormal">#FAC938</color>
+
+    <color name="redNormal">#F07594</color>
+    <color name="redGradientLight">#F28CA6</color>
+    <color name="redGradientDark">#ED5E82</color>
+
+    <color name="connectingRainbowStart">#FC00FF</color>
+    <color name="connectingRainbowEnd">#00DBDE</color>
+
+    <color name="connectingRainbowTranslucentStart">#1D0A43</color>
+    <color name="connectingRainbowTranslucentEnd">#E61D0A43</color>
+
+    <color name="shadowColor">#33FFFFFF</color>
+
+    <color name="textOnPrimary">#FFFFFF</color>
+
+
 </resources>
