--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,7 +104,7 @@
     <style name="subtitle_in_fragment" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">@color/colorSubtitle</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
     </style>
 
     <style name="button_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
@@ -152,14 +152,14 @@
     <style name="info_error_dialog_collapsed_title" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">@dimen/connect_error_collapsed_title_size</item>
         <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">@color/colorIconSecondary</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
     </style>
 
 
     <style name="info_error_dialog_collapsed_subtitle" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>
+<!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
     </style>
 
     <style name="info_error_dialog_expanded_title" parent="TextAppearance.MaterialComponents.Headline3">
@@ -172,20 +172,20 @@
     <style name="info_error_dialog_expanded_info1" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">15sp</item>
         <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">@color/colorSubtitle</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
     </style>
 
     <style name="info_error_dialog_expanded_info2" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">@color/colorIconSecondary</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
     </style>
 
 
     <style name="info_error_dialog_expanded_location_title" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">5sp</item>
-        <item name="android:textColor">@color/colorIconSecondary</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
 
     </style>
 
@@ -193,7 +193,7 @@
     <style name="info_error_dialog_expanded_location_subtitle" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">12sp</item>
         <item name="android:lineSpacingExtra">1sp</item>
-        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>
+<!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
 
     </style>
 
@@ -219,7 +219,7 @@
     <style name="report_step_info" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">12sp</item>
         <item name="android:lineSpacingExtra">1sp</item>
-        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>
+<!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
     </style>
 
     <style name="report_step_duration" parent="TextAppearance.MaterialComponents.Headline3">
@@ -233,6 +233,19 @@
         <item name="android:lineSpacingExtra">3sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
     </style>
+
+    <!--New styles from here-->
+    <!--  Text styles  -->
+    <style name="button_text_connect" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">20sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:textColor">@color/greenDarkText</item>
+        <item name="android:shadowColor">@color/shadowColor</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">1.5</item>
+        <item name="android:shadowRadius">0</item>
+    </style>
+
 
 
 </resources>
