--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,12 @@
 
     <item
         android:id="@+id/navigation_connect"
-        android:icon="@drawable/ic_connect"
+        android:icon="@drawable/ic_bottom_nav_connect"
         android:title="@string/nav_connect" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/nav_support" />
-
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/nav_settings" />
+        android:icon="@drawable/ic_bottom_nav_config"
+        android:title="@string/nav_configure" />
 
 </menu>
