--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,17 @@
     <!-- Base application theme. -->
     <style name="Theme.TorWithArti" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/figma_bg</item>
-        <item name="colorPrimaryVariant">@color/figma_gray</item>
-        <item name="colorOnPrimary">@color/figma_text</item>
+        <item name="colorPrimary">@color/purpleDark</item>
+        <item name="colorPrimaryVariant">@color/purpleNormal</item>
+        <item name="colorOnPrimary">@color/textOnPrimary</item>
         <!-- Secondary brand color(same as primary in our case). -->
-        <item name="colorSecondary">@color/figma_bg</item>
-        <item name="colorSecondaryVariant">@color/figma_gray</item>
-        <item name="colorOnSecondary">@color/figma_text</item>
+        <item name="colorSecondary">@color/purpleDark</item>
+        <item name="colorSecondaryVariant">@color/purpleNormal</item>
+        <item name="colorOnSecondary">@color/textOnPrimary</item>
 
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/colorIconPrimary</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/purpleDark</item>
 
         <!-- Customize your theme here. -->
     </style>
