--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,6 @@
     <dimen name="connect_state_button_width">105dp</dimen>
     <dimen name="bottom_nav_height">68dp</dimen>
     <dimen name="design_bottom_navigation_height" tools:override="true">62dp</dimen>
-
+    <dimen name="title_top_padding">56dp</dimen>
 
 </resources>
