--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--  ###### -->
     <style name="you_re_read">
@@ -9,9 +9,11 @@
 
 
     <style name="title_in_fragment" parent="TextAppearance.MaterialComponents.Headline3">
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">32sp</item>
         <item name="android:lineSpacingExtra">2sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:paddingBottom">38dp</item>
+        <item name="android:paddingTop">28dp</item>
     </style>
 
     <style name="paragraph_title" parent="TextAppearance.MaterialComponents.Subtitle1">
@@ -44,7 +46,14 @@
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
+    </style>
 
+    <style name="list_item_subheader_style" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textFontWeight" tools:targetApi="p">300</item>
     </style>
 
 
