--- a/app/src/main/res/layout/app_item_view.xml
+++ b/app/src/main/res/layout/app_item_view.xml
@@ -7,29 +7,35 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
-       android:padding="@dimen/compact_padding">
+       android:paddingVertical="@dimen/compact_padding"
+       android:paddingStart="0dp"
+       android:paddingEnd="12dp"
+       >
 
       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/ivAppImage"
-          android:layout_width="56dp"
-          android:layout_height="56dp"
+          android:layout_width="60dp"
+          android:layout_height="60dp"
           tools:src="@drawable/ic_dummy_app"
-
+          android:background="@drawable/app_item_background"
+          android:padding="10dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           />
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvAppTitle"
+          style="@style/text_body_small"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:maxLines="3"
+          android:paddingTop="4dp"
           tools:text = "an app with a quite long title"
           app:layout_constraintTop_toBottomOf="@id/ivAppImage"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintWidth_max="72dp"
+          app:layout_constraintWidth_max="60dp"
           />
 
    </androidx.constraintlayout.widget.ConstraintLayout>
