--- a/app/src/main/res/layout/app_switch_item_view.xml
+++ b/app/src/main/res/layout/app_switch_item_view.xml
@@ -5,7 +5,8 @@
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:padding="@dimen/default_padding">
+        android:paddingVertical="@dimen/compact_padding"
+        >
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivAppImage"
             android:layout_width="36dp"
@@ -17,7 +18,7 @@
             />
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
-            android:textAppearance="@style/list_item_style"
+            style="@style/list_item_style"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="start"
@@ -34,23 +35,24 @@
             />
         <View
             android:id="@+id/divider"
-            android:layout_width="0.6dp"
-            android:layout_height="0dp"
+            android:layout_width="1dp"
+            android:layout_height="36dp"
             app:layout_constraintEnd_toStartOf="@id/smItemSwitch"
-            app:layout_constraintHeight_percent="0.8"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@android:color/darker_gray"
+            android:background="@color/purpleDarkBorder"
             android:layout_marginHorizontal="@dimen/compact_padding"
             android:paddingHorizontal="@dimen/compact_padding"
             />
-        <com.google.android.material.switchmaterial.SwitchMaterial
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/smItemSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:track="@drawable/toggle_track"
+            android:thumb="@drawable/toggle_thumb"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
