--- a/app/src/main/res/layout/app_title_view.xml
+++ b/app/src/main/res/layout/app_title_view.xml
@@ -5,6 +5,9 @@
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/paragraph_title"
-            tools:text="testapp"/>
+            android:paddingVertical="@dimen/default_padding"
+            style="@style/paragraph_title"
+            tools:text="testapp"
+            tools:textColor="#000000"
+            />
 </layout>
