--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,7 @@
         <item name="android:textColor">#0C0C0D</item>
     </style>
 
-
-    <style name="title_in_fragment" parent="TextAppearance.MaterialComponents.Headline3">
+    <style name="title_in_fragment" parent="TextAppearance.MaterialComponents.Headline2">
         <item name="android:textSize">32sp</item>
         <item name="android:lineSpacingExtra">2sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
@@ -19,8 +18,9 @@
     <style name="paragraph_title" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textColor">@color/purpleNormal</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textFontWeight" tools:targetApi="p">550</item>
     </style>
 
     <style name="subtitle_in_fragment" parent="TextAppearance.MaterialComponents.Subtitle1">
@@ -30,9 +30,10 @@
     </style>
 
     <style name="button_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
-        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textColor">@color/purpleDarkText</item>
+        <item name="android:textFontWeight" tools:targetApi="p">550</item>
     </style>
 
     <style name="label_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
@@ -42,18 +43,32 @@
 
     </style>
 
-    <style name="list_item_style" parent="TextAppearance.MaterialComponents.Body1">
-        <item name="android:textSize">16sp</item>
+    <style name="list_item_style" parent="TextAppearance.MaterialComponents.Headline3">
+        <item name="android:textSize">18sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
+
+    <style name="text_body_small" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
+
+    <style name="list_item_style_medium" parent="TextAppearance.MaterialComponents.Headline3">
+        <item name="android:textSize">20sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textFontWeight" tools:targetApi="p">550</item>
     </style>
 
     <style name="list_item_subheader_style" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
-        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="android:textColor">@color/purpleDarkTextSubdued</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textFontWeight" tools:targetApi="p">300</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
     </style>
 
 
