clean up code, fix lint issues

--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -44,7 +44,7 @@
             app:drawable="@drawable/ic_apps"
             app:text="@string/apps"
             app:secondaryText="@string/apps_description_all_protected"
-            android:onClick="@{handler.onAppsClicked}"
+            android:onClick="@{handler::onAppsClicked}"
             />
 
         <com.example.torwitharti.ui.configure.view.ConfigItemView
@@ -53,7 +53,7 @@
             app:drawable="@drawable/ic_code"
             app:text="@string/tor_logs"
             app:secondaryText="@string/tor_logs_description"
-            android:onClick="@{handler.onTorLogsClicked}"
+            android:onClick="@{handler::onTorLogsClicked}"
             />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </ScrollView>
