--- a/app/src/main/res/drawable/av_connect_to_pause.xml
+++ b/app/src/main/res/drawable/av_connect_to_pause.xml
@@ -4,40 +4,60 @@
 
     <aapt:attr name="android:drawable">
         <vector
-            android:width="22dp"
-            android:height="22dp"
-            android:viewportWidth="22"
-            android:viewportHeight="22">
+            android:width="183dp"
+            android:height="124dp"
+            android:viewportWidth="183"
+            android:viewportHeight="124">
             <path
-                android:name="shape-right"
-                android:fillColor="#400A76"
-                android:pathData="M15.125,21.5C14.425,21.5 13.831,21.256 13.344,20.769C12.856,20.281 12.613,19.688 12.613,18.987V3.012C12.613,2.312 12.856,1.719 13.344,1.231C13.831,0.744 14.425,0.5 15.125,0.5H18.987C19.688,0.5 20.281,0.744 20.769,1.231C21.256,1.719 21.5,2.312 21.5,3.012V18.987C21.5,19.688 21.256,20.281 20.769,20.769C20.281,21.256 19.688,21.5 18.987,21.5H15.125" />
+                android:name="rounded-corner-shape"
+                android:fillColor="@color/greenNormal"
+                android:pathData="M44,20L139,20A24,24 0,0 1,163 44L163,80A24,24 0,0 1,139 104L44,104A24,24 0,0 1,20 80L20,44A24,24 0,0 1,44 20z" />
 
             <path
-                android:name="shape-left"
-                android:fillColor="#400A76"
-                android:pathData="ZM3.012,21.5C2.312,21.5 1.719,21.256 1.231,20.769C0.744,20.281 0.5,19.688 0.5,18.987V3.012C0.5,2.312 0.744,1.719 1.231,1.231C1.719,0.744 2.312,0.5 3.012,0.5H6.875C7.575,0.5 8.169,0.744 8.656,1.231C9.144,1.719 9.387,2.312 9.387,3.012V18.987C9.387,19.688 9.144,20.281 8.656,20.769C8.169,21.256 7.575,21.5 6.875,21.5H3.012Z" />
+                android:name="pause-shape"
+                android:fillColor="@android:color/transparent"
+                android:pathData="M95.62,72.5C94.93,72.5 94.33,72.26 93.84,71.77C93.36,71.28 93.11,70.69 93.11,69.99L93.11,54.01C93.11,53.31 93.36,52.72 93.84,52.23C94.33,51.74 94.93,51.5 95.62,51.5L99.49,51.5C100.19,51.5 100.78,51.74 101.27,52.23C101.76,52.72 102,53.31 102,54.01L102,69.99C102,70.69 101.76,71.28 101.27,71.77C100.78,72.26 100.19,72.5 99.49,72.5L95.62,72.5ZM83.51,72.5C82.81,72.5 82.22,72.26 81.73,71.77C81.24,71.28 81,70.69 81,69.99L81,54.01C81,53.31 81.24,52.72 81.73,52.23C82.22,51.74 82.81,51.5 83.51,51.5L87.38,51.5C88.07,51.5 88.67,51.74 89.16,52.23C89.64,52.72 89.89,53.31 89.89,54.01L89.89,69.99C89.89,70.69 89.64,71.28 89.16,71.77C88.67,72.26 88.07,72.5 87.38,72.5L83.51,72.5Z" />
         </vector>
 
 
     </aapt:attr>
 
-    <target
-        android:name="shape-right"
-        android:animation="@animator/connect_pause_visibility" />
+    <target android:name="rounded-corner-shape">
+        <aapt:attr name="android:animation">
+            <set
+                android:duration="@integer/default_transition_anim_duration"
+                android:interpolator="@android:anim/decelerate_interpolator">
+
+                <objectAnimator
+                    android:propertyName="pathData"
+                    android:valueFrom="M44,20L139,20A24,24 0,0 1,163 44L163,80A24,24 0,0 1,139 104L44,104A24,24 0,0 1,20 80L20,44A24,24 0,0 1,44 20z"
+                    android:valueTo="M89.5,20L93.5,20A42,42 0,0 1,135.5 62L135.5,62A42,42 0,0 1,93.5 104L89.5,104A42,42 0,0 1,47.5 62L47.5,62A42,42 0,0 1,89.5 20z"
+                    android:valueType="pathType" />
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:propertyName="fillColor"
+                    android:valueFrom="@color/greenNormal"
+                    android:valueTo="@color/purpleNormal" />
+            </set>
+        </aapt:attr>
+    </target>
 
 
-    <target
-        android:name="shape-left"
-        android:animation="@animator/connect_pause_visibility" />
+    <target android:name="pause-shape">
+        <aapt:attr name="android:animation">
+            <set
+                android:duration="@integer/default_transition_anim_duration"
+                android:interpolator="@android:anim/decelerate_interpolator">
 
-    <!--        <target-->
-    <!--            android:name="shape-right"-->
-    <!--            android:animation="@animator/connect_connect_to_pause_morph_right" />-->
-
-    <!--    <target-->
-    <!--        android:name="shape-left"-->
-    <!--        android:animation="@animator/connect_pause_to_stop_morph_left" />-->
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:propertyName="fillColor"
+                    android:valueFrom="@android:color/transparent"
+                    android:valueTo="@color/purpleDarkText" />
+            </set>
+        </aapt:attr>
+    </target>
 
 
 </animated-vector>
