--- a/app/src/main/res/drawable/av_pause_to_stop.xml
+++ b/app/src/main/res/drawable/av_pause_to_stop.xml
@@ -4,29 +4,96 @@
 
     <aapt:attr name="android:drawable">
         <vector
-            android:width="22dp"
-            android:height="22dp"
-            android:viewportWidth="22"
-            android:viewportHeight="22">
+            android:width="128dp"
+            android:height="124dp"
+            android:viewportWidth="128"
+            android:viewportHeight="124">
             <path
-                android:name="shape-right"
-                android:fillColor="#400A76"
-                android:pathData="M15.125,21.5C14.425,21.5 13.831,21.256 13.344,20.769C12.856,20.281 12.613,19.688 12.613,18.987V3.012C12.613,2.312 12.856,1.719 13.344,1.231C13.831,0.744 14.425,0.5 15.125,0.5H18.987C19.688,0.5 20.281,0.744 20.769,1.231C21.256,1.719 21.5,2.312 21.5,3.012V18.987C21.5,19.688 21.256,20.281 20.769,20.769C20.281,21.256 19.688,21.5 18.987,21.5H15.125Z" />
+                android:name="round-shape"
+                android:fillColor="@color/purpleNormal"
+                android:pathData="M62,20L66,20A42,42 0,0 1,108 62L108,62A42,42 0,0 1,66 104L62,104A42,42 0,0 1,20 62L20,62A42,42 0,0 1,62 20z" />
+            <group>
+                <clip-path android:pathData="M46,44h36v36h-36z" />
+                <path
+                    android:name="pause-shape-right"
+                    android:fillColor="@color/purpleDarkText"
+                    android:pathData="M68.12,72.5C67.43,72.5 66.83,72.26 66.34,71.77C65.86,71.28 65.61,70.69 65.61,69.99V54.01C65.61,53.31 65.86,52.72 66.34,52.23C66.83,51.74 67.43,51.5 68.12,51.5H71.99C72.69,51.5 73.28,51.74 73.77,52.23C74.26,52.72 74.5,53.31 74.5,54.01V69.99C74.5,70.69 74.26,71.28 73.77,71.77C73.28,72.26 72.69,72.5 71.99,72.5H68.12Z" />
 
-<!--            <path-->
-<!--                android:name="shape-left"-->
-<!--                android:fillColor="#400A76"-->
-<!--                android:pathData="M3.012,21.5C2.312,21.5 1.719,21.256 1.231,20.769C0.744,20.281 0.5,19.688 0.5,18.987V3.012C0.5,2.312 0.744,1.719 1.231,1.231C1.719,0.744 2.312,0.5 3.012,0.5H6.875C7.575,0.5 8.169,0.744 8.656,1.231C9.144,1.719 9.387,2.312 9.387,3.012V18.987C9.387,19.688 9.144,20.281 8.656,20.769C8.169,21.256 7.575,21.5 6.875,21.5H3.012Z" />-->
-       </vector>
+                <path
+                    android:name="pause-shape-left"
+                    android:fillColor="@color/purpleDarkText"
+                    android:pathData="M56.01,72.5C55.31,72.5 54.72,72.26 54.23,71.77C53.74,71.28 53.5,70.69 53.5,69.99V54.01C53.5,53.31 53.74,52.72 54.23,52.23C54.72,51.74 55.31,51.5 56.01,51.5H59.88C60.58,51.5 61.17,51.74 61.66,52.23C62.14,52.72 62.39,53.31 62.39,54.01V69.99C62.39,70.69 62.14,71.28 61.66,71.77C61.17,72.26 60.58,72.5 59.88,72.5H56.01Z" />
+            </group>
+        </vector>
+
 
     </aapt:attr>
-<!--    <target-->
-<!--        android:name="shape-right"-->
-<!--        android:animation="@animator/connect_pause_to_stop_morph_right" />-->
 
-<!--    <target-->
-<!--        android:name="shape-left"-->
-<!--        android:animation="@animator/connect_pause_to_stop_morph_left" />-->
+    <target android:name="pause-shape-right">
+        <aapt:attr name="android:animation">
+            <set>
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:propertyName="pathData"
+                    android:valueFrom="M68.12,72.5C67.43,72.5 66.83,72.26 66.34,71.77C65.86,71.28 65.61,70.69 65.61,69.99V54.01C65.61,53.31 65.86,52.72 66.34,52.23C66.83,51.74 67.43,51.5 68.12,51.5H71.99C72.69,51.5 73.28,51.74 73.77,52.23C74.26,52.72 74.5,53.31 74.5,54.01V69.99C74.5,70.69 74.26,71.28 73.77,71.77C73.28,72.26 72.69,72.5 71.99,72.5H68.12Z"
+                    android:valueTo="M58.15,71C57.28,71 56.53,70.69 55.92,70.08C55.31,69.47 55,68.72 55,67.85V56.15C55,55.28 55.31,54.53 55.92,53.92C56.53,53.31 57.28,53 58.15,53H69.85C70.72,53 71.47,53.31 72.08,53.92C72.69,54.53 73,55.28 73,56.15V67.85C73,68.72 72.69,69.47 72.08,70.08C71.47,70.69 70.72,71 69.85,71H58.15Z"
+                    android:valueType="pathType" />
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:propertyName="fillColor"
+                    android:valueFrom="@color/purpleDarkText"
+                    android:valueTo="@color/redDark" />
+
+            </set>
+        </aapt:attr>
+    </target>
+
+    <target android:name="pause-shape-left">
+        <aapt:attr name="android:animation">
+            <set>
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:propertyName="pathData"
+                    android:valueFrom="M56.01,72.5C55.31,72.5 54.72,72.26 54.23,71.77C53.74,71.28 53.5,70.69 53.5,69.99V54.01C53.5,53.31 53.74,52.72 54.23,52.23C54.72,51.74 55.31,51.5 56.01,51.5H59.88C60.58,51.5 61.17,51.74 61.66,52.23C62.14,52.72 62.39,53.31 62.39,54.01V69.99C62.39,70.69 62.14,71.28 61.66,71.77C61.17,72.26 60.58,72.5 59.88,72.5H56.01Z"
+                    android:valueTo="M58.15,71C57.28,71 56.53,70.69 55.92,70.08C55.31,69.47 55,68.72 55,67.85V56.15C55,55.28 55.31,54.53 55.92,53.92C56.53,53.31 57.28,53 58.15,53H69.85C70.72,53 71.47,53.31 72.08,53.92C72.69,54.53 73,55.28 73,56.15V67.85C73,68.72 72.69,69.47 72.08,70.08C71.47,70.69 70.72,71 69.85,71H58.15Z"
+                    android:valueType="pathType" />
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:propertyName="fillColor"
+                    android:valueFrom="@color/purpleDarkText"
+                    android:valueTo="@color/redDark" />
+            </set>
+        </aapt:attr>
+    </target>
+
+    <target android:name="round-shape">
+        <aapt:attr name="android:animation">
+            <set>
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:interpolator="@android:anim/accelerate_interpolator"
+                    android:propertyName="pathData"
+                    android:valueFrom="M62,20L66,20A42,42 0,0 1,108 62L108,62A42,42 0,0 1,66 104L62,104A42,42 0,0 1,20 62L20,62A42,42 0,0 1,62 20z"
+                    android:valueTo="M44,20L84,20A24,24 0,0 1,108 44L108,80A24,24 0,0 1,84 104L44,104A24,24 0,0 1,20 80L20,44A24,24 0,0 1,44 20z"
+                    android:valueType="pathType" />
+
+
+                <objectAnimator
+                    android:duration="@integer/default_transition_anim_duration"
+                    android:propertyName="fillColor"
+                    android:valueFrom="@color/purpleNormal"
+                    android:valueTo="@color/redNormal" />
+            </set>
+        </aapt:attr>
+
+    </target>
 
 
 </animated-vector>
